chisha.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400@family=Rubik:wght@300;400&display=swap');

body{
background-color: #FBDA61;
background-image: linear-gradient(65deg, #FBDA61 0%, #FF5ACD 50%, #00FFFF 110%);
background-size: 200% 100%;
animation: gradient 4s linear infinite alternate;
height: 100vh;
display: flex;
justify-content: left;
font-family: 'Open Sans', sans-serif;
font-size: large;
writing-mode: horizontal-rl;
display: block;
}

@keyframes gradient {
  0%  {
    background-position: 0%;    
    }
  100% {
    background-position: 100%;  
  }
}

h1 {
    color: white;
    font-family: 'Open Sans', sans-serif;
    font-weight: 200;
    font-size: 4rem;
    letter-spacing: 1rem;
    text-align: center;
    padding: 10px;
}

h2 {
    color: white;
    font-weight: 200;
    font-size: 2rem;
    letter-spacing: 0.25rem;
    text-align: center;
}

h3 {
  text-align: center;
  font-weight: 200;
}

h4 {
  text-align: center;
  font-weight: 180;
}

main { margin: 5%;}

p {text-align: center;}

/* Navigation Bar */
body {margin:0;}

.navbar {
  overflow: hidden;
  background-color: #FBDA61;
  background-image: linear-gradient(65deg, #FBDA61 0%, #FF5ACD 50%, #00FFFF 110%); 
  position: fixed;   /* Set the navbar to fixed position */
  top: 0;           /* Position the navbar at the top of the page */
  width: 100%;      /* Full Width*/
}

/* Links inside the navbar */
.navbar a { /* <a> refers to the parent element of the hyperlink */
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 10px 10px;
  text-decoration: none;
  font-size: 20px;
}
/* Change background on mouse-over */
.navbar a:hover {
  background: rgb(235, 233, 233);
  color: black;
}

/*.main {
  padding: 16px;
  margin-top: 30px;
} */

/* TABS */
[data-tab-content] {
  display: none;
}
/* element displayed as a block fills screen*/
.active[data-tab-content] {
  display: block;        
}
/* border line will fill whole screen horizontally*/
body {                  
  padding: 1px;
  margin: 0;
  
}

.tabs {
  display: flex;
  justify-content: space-around;
  list-style-type: none;
  margin: 0;
  padding: 0;
  border-bottom: 4px solid black;
  font-weight: 600px;
}

.tab {
  cursor: pointer;
  padding: 15px;
}

.tab.active {
  background-color: transparent;
}

.tab:hover {
  background-color: white;
}

.tab-content {
  margin-left: 10px;
  margin-right: 10px;
  padding: none;
}


/*IMAGE CAROUSEL Slideshow container */
.slideshow-container {
  width: auto;
  max-width: 600px;
  max-height: 250px;
  position: relative;
  margin: 0 auto;
  border: solid 3px white;
}
/* Hide the images by default */
.mySlides {
  display: none;
  width: 100%;
}

.mySlides img {
 width: 600px;
 height: 250px;
}
/* Position of buttons middle edge of slideshow container*/
.slideControls {
  position: absolute;
  top: 50%;
  left: 0;
  width: 100%;
  display: flex;
}

#prev {
  position: absolute;
  top: 50%;
  z-index: 10;
  left: 3%;
  font-size: 25px;
  color: white;
  opacity: 0.8;
  cursor: pointer;
  background: transparent;
  border: none;
}

#next {
  position: absolute;
  top: 50%;
  z-index: 10;
  right: 3%;
  font-size: 25px;
  color: white;
  cursor: pointer;
  background: transparent;
  border: none;
}

/* Outline style of button removed */
#prev:focus, #next:focus {
  outline: none;
  border: none;
}

/* Hover buttons transparency background color */
#prev:hover, #next:hover {
  background-color: rgba(0,0,0,0.9);
  color: white;
} 

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  #prev, #next {font-size: 11px}
}


/*Blue Button - changes color if answer correct */
.blue{
  background: #00FFFF; 
  border-radius: 50px;
}


/*Textbox - input text element can grow*/
#changeText input { /* unlimited text space for text to grow and fill box */
  border: 2px solid;
  border-radius: 50px;
  padding-right: 20px;
  justify-content: space-between;
}

/*Textbox longest spelling country */
#longestCountry {
  border: 2px solid black;
  border-radius: 50px;
}


/*Targets divclass columnLayout outside container using flexbox to make columns across screen*/
.columnLayout {
  display: flex; /* Flexbox style to center text */ 
}
/* Flexbox style to ensure all columns are same width size as siblings*/
.mainColumn {
  flex: 1;
  flex-basis: 30%; /* Flexbox shares equal columns widths 10% leftover fills space between margins */
  border: solid transparent;
  margin: 15px;
}

.twoColumn {
  flex: 1;
  flex-basis: 30%;
  border: solid transparent;
  margin: 15px;
}

.threeColumn {
  flex: 1;
  flex-basis: 30%;
  border: solid transparent;
  margin: 15px;
}

.columnLayout {
  flex-grow: 2;
}



@media (min-width: 700px) { /* if using mobile/ small screen keeps as x3columns */
#changeText {
display-flex;
justify-content: space-between;
 }
}

/* Column Images */
.oneImage img {
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex: 1;
  margin: auto;
  border-radius: 50px;
 }

 .twoImage img {
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex: 1;
  margin: auto;
  border-radius: 50px;
 }

 .threeImage img {
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex: 1;
  margin: auto;
  border-radius: 50px;
 }

.oneImage:hover, .twoImage:hover, .threeImage:hover {
  opacity: 0.7;
}
 
 @media screen and (max-width: 350px){
   #mySlides {
     width: 100%;
   }
 }


 #bulge {
  animation: bulge 3s infinite;
}
@keyframes bulge {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.2);
  }
  100% {
    transform: scale(1);
  }
}


section {
	display:-webkit-flex;
	display:-moz-flex;
	display:-ms-flex;
	display:flex;
	}
article {
	height: 300px;
	-webkit-flex:1;
	-moz-flex:1;
	-ms-flex:1;
	flex:1;
	border:1px solid transparent;
	-webkit-transition:1s all;
	-moz-transition:1s all;
	-ms-transition:1s all;
	transition:1s all;
	}
article:hover {
	-webkit-flex:2.5;
	-moz-flex:2.5;
	-ms-flex:2.5;
	flex:2.5;
	}

